# ChangeLog for dev-java/xstream
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +metadata.xml:
  creating metadata.xml to shut up repoman

  13 May 2007; Vlastimil Babka <caster@gentoo.org> xstream-1.2.1.ebuild:
  Remove KEYWORDS again till it compiles bytecode useable with all reverse
  deps like groovy, bug #178315.

  15 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> xstream-1.2.1.ebuild:
  Force >=sun-jdk-1.6 until lower ones work and add back KEYWORDS.

  15 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> xstream-1.2.1.ebuild:
  Now actually emerges.

  15 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> xstream-1.2.1.ebuild:
  Remove KEYWORDS.

  15 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> +xstream-1.2.1.ebuild:
  Add dev-java/xstream-1.2.1. Only works with sun-jdk-1.6 compiles it atm.
