@@ -1,4 +1,4 @@
 DIST xstream-distribution-1.2.1-src.zip 5344441 RMD160 69f1542abbb806f5befe4e2e48388dbd181166bf SHA1 10670cc33e43ff42d56348d04367857ac2276376 SHA256 739d33c5c95e6da0e81b83c0f0174db77da004fb32179ed9f8be6ec5ad3d68ef
-EBUILD xstream-1.2.1.ebuild 1831 RMD160 c6a272a4d76d23d65e432d1b542c712774cc3949 SHA1 92d90f419f96511a94e0829f8761ddbe782f2373 SHA256 1808cf7e92c040ac98e855283513928ee4924bf431804c170c7aab7b0b75a03c
-MISC ChangeLog 789 RMD160 b5e77fb4bb776df97752b487ab5eda0ed9ac46d2 SHA1 416fc03ffdc044ac4396bf66b372dbf9bdaddbf9 SHA256 033f64b3b4faa268b2b91e22da310177453285395ed43e3357d5b87686b2478d
+EBUILD xstream-1.2.1.ebuild 1818 RMD160 eef5898fdcfeb6d5d2d2cdfa7763df9994879ded SHA1 eeab66710fd642251e7d03a44c9f07892ca9648b SHA256 ef6e8ce810fb48a2195d967cd450bf720114779f8ece9c9c1a91300c3145aa48
+MISC ChangeLog 974 RMD160 3050be3d4821ecb861669d97b409b67af1144ece SHA1 2bbb614cb4fe0df9feac55fce0736fba60b43700 SHA256 5e40757bd3bb6075c9b592e14000a637a86f2039a28b4dbe2862f3f57d680116
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
