@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/xstream
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Feb 2009; <nelchael@gentoo.org> xstream-1.2.1.ebuild:
+  Fix KEYWORDS.
 
   14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +metadata.xml:
   creating metadata.xml to shut up repoman
